# alfred-crypto-prices

./: .gitignore  README.md  coinmarketcap.py  formatters.py  info.plist  main.py  pyproject.toml  util.py
src/: coingecko.py  coinmarketcap.py  formatters.py  main.py
workflow/: __init__.py  background.py  notify.py  update.py  util.py  web.py  workflow.py  workflow3.py
