[tool.poetry]
name = "Crypto Prices"
version = "1.9.1"
description = "Get current prices for cryptocurrencies"
documentation = "https://github.com/fedecalendino/alfred-crypto-prices/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-crypto-prices"
license = "MIT"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pycoingecko = "^3.0.0"
alfred-pyflow = "^0.4.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
ddt = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
